Polished section 12.4.2 in proto3.tex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -100,13 +100,16 @@ Listing~\ref{tab:stackengineminiprlg} represents the Stack engine.
 
 \subsection{Pure engine}
  Each node in a \haskellConstruct{Prooftree} corresponds to:
- either: a solution to the current goal, represented by \haskellConstruct{Done s}, where \haskellConstruct{s}
-         is the required substitution
- or:     a choice between a number of trees \haskellConstruct{ts}, each corresponding to a
-         proof of a goal of the current goal, represented by \haskellConstruct{Choice ts}.
-         The proof tree corresponding to an unsolvable goal is \haskellConstruct{Choice []} 
+\begin{enumerate}
+\item Either, a solution to the current goal, represented by \haskellConstruct{Done s}, where \haskellConstruct{s} is the required 
+ substitution ,or,
+ 
+\item a choice between a number of trees \haskellConstruct{ts}, each corresponding to a proof of a \haskellConstruct{goal} of the current 
+goal, represented by \haskellConstruct{Choice ts}. 
+The proof tree corresponding to an unsolvable goal is \haskellConstruct{Choice []}. 
+\end{enumerate}
 
-Listing~\ref{tab:pureengineminiprlg}
+Listing~\ref{tab:pureengineminiprlg} represents the Pure engine.
 
 \begin{code-list}[H]
 \begin{singlespace}
