polished section 12.4.3 in proto3.tex.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1549,6 +1549,13 @@ month = {January},
 year = {2015},
 url = {https://www.haskell.org/}
 }
+@article{haridi1990kernel,
+  title={Kernel Andorra Prolog and its computational model},
+  author={Haridi, Seif and Janson, Sverker},
+  journal={SICS Research Report},
+  year={1990},
+  publisher={Swedish Institute of Computer Science}
+}
 @comment{website:,
 title = ,
 author = ,
