--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,23 +11,16 @@
 % ---------------------------------------------------------------------------
 
 
-\section{About this chapter}
-
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
-
-
 \begin{comment}
 As we have seen there have been a number of attempts at solving the problem and so have been the issues. First and foremost, with appropriate  documentation the resulting library should be easy to use. Writing a program must be very much the same as writing a program in the host language. With the introduction of few new constructs defining
 \end{comment}
 
-\section{Section title needed}
+\begin{comment}
 The aim of this study is to experiment with two different languages working together and/or contributing in providing a solution. Mixing and matching conflicting characteristics may lead to a behaviour similar to that of a multi paradigm language. The points to be looked at are efficiency of the emulation, semantics of the resulting embedding.
 
 Moreover, this will be an attempt to answer the question how practical \progLang{Prolog} fits into \progLang{Haskell}.                  
+\end{comment}
 
-
-\section{Chapter recapitulation}
 
 \ifMain
 \begin{scope}
