changed section 12.6 header in proto3.tex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -180,7 +180,7 @@ compatibility.
 \label{tab:miniprlglangmod}
 \end{code-list}
 
-\section{Unification}
+\section{Unification from \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 
 \subsection{Current unification}
 
