Polished code fragments in section 13.5 and 13.6 in proton.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -210,22 +210,66 @@ we use \haskellConstruct{NoResult}.
 
 \begin{code-list}[H]
 \begin{singlespace}
-\inputminted[linenos]{haskell}{IOSketch.hs}
+\inputminted[linenos, firstline=69, lastline=93]{haskell}{IOSketch.hs}
 \end{singlespace}
-\caption{IOSketch}
-\label{tab:iosketch}
+\caption{Language data type}
+\label{tab:iosketchlanguagedatatype}
 \end{code-list}
 
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos, firstline=98, lastline=133]{haskell}{IOSketch.hs}
+\end{singlespace}
+\caption{\haskellConstruct{run} functions}
+\label{tab:iosketchrunfunctions}
+\end{code-list}
 
 \section{IOSketchM}
 
 \begin{code-list}[H]
 \begin{singlespace}
-\inputminted[linenos]{haskell}{IOSketchM.hs}
+\inputminted[linenos, firstline=31, lastline=58]{haskell}{IOSketchM.hs}
 \end{singlespace}
-\caption{IOSketchM}
-\label{tab:iosketchm}
+\caption{Language data type}
+\label{tab:iosketchmlanguagedatatype}
 \end{code-list}
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos, firstline=74, lastline=111]{haskell}{IOSketchM.hs}
+\end{singlespace}
+\caption{\haskellConstruct{run} functions}
+\label{tab:iosketchmrunfunctions}
+\end{code-list}
+
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos, firstline=130, lastline=152]{haskell}{IOSketchM.hs}
+\end{singlespace}
+\caption{Functionality for \haskellConstruct{XM Monad}}
+\label{tab:iosketchmxmmonadfunctionality}
+\end{code-list}
+
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos, firstline=161, lastline=184]{haskell}{IOSketchM.hs}
+\end{singlespace}
+\caption{Language interpretation}
+\label{tab:iosketchmlanguageinterpretation}
+\end{code-list}
+
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos, firstline=196, lastline=228]{haskell}{IOSketchM.hs}
+\end{singlespace}
+\caption{Sample program}
+\label{tab:iosketchmsampleprogram}
+\end{code-list}
+
 
 \section{Chapter recapitulation}
 
