--- a/hwh.tex
+++ b/hwh.tex
@@ -44,10 +44,7 @@ assignment statements, so variables, once given a value, never change and hence 
   could be difficult to debug since it happens at the host level and so on.
 
 
-\section{\progLang{Haskell}}
-
-
-\subsection{Monads}
+\section{Monads}
 Control flow defines the order/ manner of execution of statements in a pro\-gram \cite{website:controlflowwiki}.
 The specification is set by the programming language.
 Generally, in the case of imperative languages the control flow is sequential while for a functional language is
@@ -79,7 +76,7 @@ computation from step to step or modification to modification.
 \progLang{Haskell} allows creation of custom monads relieving the burden of dealing with a fixed model of the
 host language.
 
-\subsection{Lazy evaluation}
+\section{Lazy evaluation}
 Another property of \progLang{Haskell} is laziness or lazy evaluation which means that nothing is evaluated until
 it is necessary.
 This results in the ability to define infinite data structures because at execution only a fragment is used
