--- a/hwh.tex
+++ b/hwh.tex
@@ -76,6 +76,61 @@ computation from step to step or modification to modification.
 \progLang{Haskell} allows creation of custom monads relieving the burden of dealing with a fixed model of the
 host language.
 
+\section{Monads by example: state monad}
+
+In this section we try and replicate a dictionary of variables. The operations such as adding and removing entries to and from the
+dictionary are implemented so as to replicate modification. Listing~\ref{tab:hskllmndworkngdatatype} shows the structure of the 
+\haskellConstruct{IntegerDictionary} for storing and modifying the \haskellConstruct{Variables}. Each \haskellConstruct{Variable} is a \haskellConstruct{VariableName}, \haskellConstruct{Value} pair.
+ 
+\begin{code-list}[H]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=22, lastline=33]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Data Types}
+\label{tab:hskllmndworkngdatatype}
+\end{code-list}
+
+Listing~\ref{tab:hskllmndworkngfunctions} shows the insertion and removal in a variable dictionary and the \haskellConstruct{run} function 
+for applying the operation on the dictionary.
+
+\begin{code-list}[H]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=35, lastline=69]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Functions}
+\label{tab:hskllmndworkngfunctions}
+\end{code-list}
+
+Listing~\ref{tab:hskllmndworkngexamples} shows a combination of the operation of finding a product of the two variables and 
+storing back the result in the dictionary.
+
+
+\begin{code-list}[H]
+  \begin{singlespace}
+    \inputminted[linenos, firstline=71, lastline=84]{haskell}{haskell-monad-working-2.hs}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Examples}
+\label{tab:hskllmndworkngexamples}
+\end{code-list}
+
+Listing~\ref{tab:hskllmndworkngexamplesoutput} shows the output of \haskellConstruct{runExampleOperation} function.
+
+\begin{code-list}[H]
+  \begin{singlespace}
+%    \inputminted[linenos, firstline=86, lastline=89]{haskell}{haskell-monad-working-2.hs} % does not colour as it is in comments in .hs 
+%file
+\begin{minted}[linenos]{haskell}
+runExampleOperation init_dictionary (Variable ("x", 10)) (Variable ("y", 20))
+[Variable ("x0",0),Variable ("x1",1),Variable ("x2",2),Variable ("x3",3),
+Variable ("x4",4),Variable ("x5",5),Variable ("x",10),Variable ("y",20),
+Variable ("product",200)]
+\end{minted}
+  \end{singlespace}
+  \caption{Haskell Monad Working: Example output}
+\label{tab:hskllmndworkngexamplesoutput}
+\end{code-list}
+
+
 \section{Lazy evaluation}
 Another property of \progLang{Haskell} is laziness or lazy evaluation which means that nothing is evaluated until
 it is necessary.
