removed section 8.3 and converted its subsections to sections.

--- a/pwp.tex
+++ b/pwp.tex
@@ -33,10 +33,8 @@ language to extend its capabilities.
 One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language are from the same paradigm.
 This provides a platform to play around with the conflicting characteristics of the two languages.
 
-\section{\progLang{Prolog}}
 
-
-\subsection{Simple Syntax}
+\section{Simple Syntax}
 
 \progLang{Prolog} is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and 
 compound terms \cite{wikiprolog}.
@@ -125,20 +123,20 @@ Variables in \progLang{Prolog} are rather different from those in most other lan
 
 \end{comment}
 
-\subsection{Simple Semantics}
+\section{Simple Semantics}
 
 Since the commutative nature of logical disjunction and conjunction, declaratively speaking the order of rules and their sub goals is
 irrelevant. However, the procedural aspect must be taken into account to determine the execution strategy of \progLang{Prolog} since it
 has to deal with impure predicates. Moreover, a particular order of execution can lead to infinite recursion.
 
-\subsection{Universal Horn clauses}
+\section{Universal Horn clauses}
 
 
-\subsection{Unification}
+\section{Unification}
 
 
 
-\subsection{Definite clause grammar}
+\section{Definite clause grammar}
 
 \section{How \progLang{Prolog} works}
 
