added link in section 8.1, moved content from 8.2 to 8.1 and deleted 8.2 in pwp.tex.

--- a/pwp.tex
+++ b/pwp.tex
@@ -23,17 +23,10 @@ language to extend its capabilities.
   query on which will return a result.
   The relation between them is defined by clauses using \textit{Horn Clauses} \cite{wikiprolog}.
   \progLang{Prolog} is very popular and has a number of implementations
-  \cite{website:comparisonofprologimplementationswiki} for different purposes.
+  \cite{website:comparisonofprologimplementationswiki} for different purposes. \progLang{Prolog} comes from the same family as 
+  \progLang{Haskell} i.e. the declarative paradigm. One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language are from the same paradigm.
+  This provides a platform to play around with the conflicting characteristics of the two languages.
   
-\section{Logic programming language}
-
-%Our base language, \progLang{Haskell}, is from the same paradigm. It would be interesting to see how two languages of the same family with 
-%conflicting features can be made to work together.
-
-One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language are from the same paradigm.
-This provides a platform to play around with the conflicting characteristics of the two languages.
-
-
 \section{Simple Syntax}
 
 \progLang{Prolog} is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and 
