changed listing captions to accomodate library name in proto3.tex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -94,7 +94,7 @@ Listing~\ref{tab:stackengineminiprlg} represents the Stack engine.
 \begin{singlespace}
 \inputminted[linenos, firstline=29, lastline=56]{haskell}{haskell-proto3-sudsy-woe.hs}
 \end{singlespace}
-\caption{Stack engine from \cite{website:mini-prolog-hugs98}}
+\caption{Stack engine from \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 \label{tab:stackengineminiprlg}
 \end{code-list}
 
@@ -115,7 +115,7 @@ Listing~\ref{tab:pureengineminiprlg} represents the Pure engine.
 \begin{singlespace}
 \inputminted[linenos, firstline=26, lastline=46]{haskell}{haskell-proto3-absurd-silicon.hs}
 \end{singlespace}
-\caption{Pure engine from \cite{website:mini-prolog-hugs98}}
+\caption{Pure engine from \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 \label{tab:pureengineminiprlg}
 \end{code-list}
 
@@ -146,7 +146,7 @@ Listing~\ref{tab:andorraengineminiprlg} represents the Andorra engine.
 \begin{singlespace}
 \inputminted[linenos, firstline=29, lastline=64]{haskell}{haskell-proto3-diatomic-unbank.hs}
 \end{singlespace}
-\caption{Andorra engine from \cite{website:mini-prolog-hugs98}}
+\caption{Andorra engine from \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 \label{tab:andorraengineminiprlg}
 \end{code-list}
 
@@ -161,7 +161,7 @@ of a head of type \haskellConstruct{Term }and a body of type \haskellConstruct{[
 \begin{singlespace}
   \inputminted[linenos, firstline=24, lastline=37]{haskell}{haskell-proto3-butter-chicken.hs}
 \end{singlespace}
-\caption{Current abstract syntax grammar in \cite{website:mini-prolog-hugs98}}
+\caption{Current abstract syntax grammar in \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 \label{tab:miniprlglang}
 \end{code-list}
 
@@ -192,7 +192,7 @@ the previous prototypes.
 \begin{singlespace}
   \inputminted[linenos, firstline=67, lastline=95]{haskell}{haskell-proto3-pentyl-skater.hs}
 \end{singlespace}
-\caption{Current unification procedure in \cite{website:mini-prolog-hugs98}}
+\caption{Current unification procedure in \protect{\codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}}
 \label{tab:miniprlgunif}
 \end{code-list}
 
