added content to section 14.3 in futureScope.tex.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -46,6 +46,8 @@ Listing~\ref{tab:queryresolvervariablesearchstrat} depicts an example query requ
 \label{tab:queryresolvervariablesearchstrat}
 \end{code-list}  
 
+A potential improvement would be add a construct to the abstract grammar itself which can allow to change the search strategy dynamically.
+
 \section{Database operations for \progLang{Prolog}}
 Operations for manipulating the clause database containing facts and clauses are provided with many \progLang{Prolog} distributions such as
 \progLang{SWI Prolog} \cite{website:swiprologdbops}. Operations such \prologConstruct{assertz} \cite{website:assertzswiprolog} would provide
