added content to section 14.4 in futureScope.tex.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -51,7 +51,7 @@ A potential improvement would be add a construct to the abstract grammar itself 
 \section{Database operations for \progLang{Prolog}}
 Operations for manipulating the clause database containing facts and clauses are provided with many \progLang{Prolog} distributions such as
 \progLang{SWI Prolog} \cite{website:swiprologdbops}. Operations such \prologConstruct{assertz} \cite{website:assertzswiprolog} would provide
-the ability to modify the knowledge base at runtime. 
+the ability to modify the knowledge base at runtime. This is only partially implemented by \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib}.
 
 Moreover, \progLang{SWI Prolog} provides multiple mechanisms for storage and modification as described in \cite{website:swiprologdbops}.
 
