added content to section 14.5 in futureScope.tex.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -91,7 +91,8 @@ Listing~\ref{tab:hybridconstruct} provides an example.
 \label{tab:hybridconstruct}
 \end{code-list}
 
-
+In the above example, the \haskellConstruct{c} type variable is not used by any constructor in \haskellConstruct{FlatTerm} and the fixed 
+point will be calculated around it. 
 
 \section{Chapter recapitulation}
 Recapitulating, this chapter provided us with points where this thesis could be extended in the future along with suitable samples for the
