Updated content in section 14.2 in futureScope.tex.

--- a/background.tex
+++ b/background.tex
@@ -99,7 +99,7 @@ The \progLang{Prolog} language has been partially implemented \cite{swipembedd} 
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog},
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on.
 
-\section{Approaches to integration}
+\section{Approaches to integration}\label{background:approachestointegration}
 
 The technique of embedding is a shallow one.
 It is as if the embedded language floats over the host language.
