--- a/hwh.tex
+++ b/hwh.tex
@@ -140,7 +140,7 @@ This results in the ability to define infinite data structures because at execut
 \cite{website:haskelllazinesswiki}.
 
 
-\section{Quasiquotation and \progLang{Haskell}}
+\section{Quasiquotation and \progLang{Haskell}}\label{hwh:quasiquotationandhaskell}
 \subsection{Quasiquotation}
 \mehul{needs to be compressed into a single short explanation}
 
