--- a/futureScope.tex
+++ b/futureScope.tex
@@ -15,10 +15,9 @@
 This chapter discusses additions that could be made on the contributions of this thesis.
 
 
-\section{\progLang{Prolog} quasiquoter}
-With the current eDSL, the native \progLang{Haskell} constructs are used to write a \progLang{Prolog}-like program. The syntax though
-\progLang{Haskell} in nature differs considerably from \progLang{Prolog}. A quasiquoter could be a step closer to the solution for writing
-native \progLang{Prolog}-like programs in \progLang{Haskell}. Listing ~ \ref{tab:qqprlginhskll} shows an example for the same.
+\section{\progLang{Prolog} quasiquoter with antiquotation}
+As discussed in Section~\ref{background:approachestointegration} and Section~\ref{hwh:quasiquotationandhaskell}, a quasiquoter provides
+an economy of expression to describe a program in the eDSL. Listing~\ref{tab:qqprlginhskll} shows an example for a \progLang{Prolog}.
 
 \begin{code-list}[H]
 \begin{singlespace}
@@ -29,7 +28,7 @@ native \progLang{Prolog}-like programs in \progLang{Haskell}. Listing ~ \ref{tab
 \end{code-list}
 
 This not only provides a simpler interface but also allows interchangeable usage of programming constructs of different languages in the 
-same expression.For the example above, \prologConstruct{X} is a  \progLang{Prolog} variable and \haskellConstruct{y} is a 
+same expression. For the example above, \prologConstruct{X} is a \progLang{Prolog} variable and \haskellConstruct{y} is a 
 \progLang{Haskell} variable injected into the expression 
 
 \section{Runtime search strategy selection}
