--- a/hwh.tex
+++ b/hwh.tex
@@ -142,22 +142,14 @@ This results in the ability to define infinite data structures because at execut
 
 \section{Quasiquotation and \progLang{Haskell}}\label{hwh:quasiquotationandhaskell}
 \subsection{Quasiquotation}
-\mehul{needs to be compressed into a single short explanation}
 
-When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that `turns 
-language on itself'. Quotation is one such device \cite{website:quotationstanford}.
-
-A metalinguistic device for referring to the form of an expression containing variables without referring to the symbols for those 
-variables. Thus while ``not p'' refers to the expression consisting of the word not followed by the letter p, the quasi-quotation \newline
-$\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of the word not followed by any value of the variable p 
-\cite{website:quasiquotationfreedictionary}.
-
-Quasi-quotation or Quine quotation is a linguistic device in formal languages that facilitates rigorous and terse formulation of general 
-rules about linguistic expressions while properly observing the use--mention distinction \cite{wikiquasi}.
-
-The use--mention distinction is a foundational concept of analytic philosophy,[1] according to which it is necessary to make a distinction 
-between using a word (or phrase) and mentioning it \cite{website:usementiondistinctionwiki}.
-
+Quotation is a device for exactly specifying some text \cite{website:quotationstanford}. Thus ``not p'' refers to the expression consisting of the word not 
+followed by the letter p. 
+Quasi-quotation or Quine is a metalinguistic device for referring to the form of an expression containing variables without 
+referring to the symbols for those variables. 
+Thus $\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of the word not followed by 
+any value of the variable p \cite{website:quasiquotationfreedictionary}.
+Quasi-quotation facilitates rigorous and terse formulation of general rules about linguistic expressions \cite{wikiquasi}.
 
 \subsection{Quasiquotaion in \progLang{Haskell}}
 
