--- a/hwh.tex
+++ b/hwh.tex
@@ -143,13 +143,14 @@ This results in the ability to define infinite data structures because at execut
 \section{Quasiquotation and \progLang{Haskell}}\label{hwh:quasiquotationandhaskell}
 \subsection{Quasiquotation}
 
-Quotation is a device for exactly specifying some text \cite{website:quotationstanford}. Thus ``not p'' refers to the expression consisting of the word not 
-followed by the letter p. 
-Quasi-quotation or Quine is a metalinguistic device for referring to the form of an expression containing variables without 
-referring to the symbols for those variables. 
-Thus $\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of the word not followed by 
-any value of the variable p \cite{website:quasiquotationfreedictionary}.
-Quasi-quotation facilitates rigorous and terse formulation of general rules about linguistic expressions \cite{wikiquasi}.
+Quotation is a device for exactly specifying some text \cite{website:quotationstanford}.
+Thus ``not p'' refers to the expression consisting of the word not followed by the letter p.
+Quasi-quotation, or Quine quotation, is a metalinguistic device for referring to the form of an expression containing
+variables without referring to the symbols for those variables.
+Thus $\left\ulcorner \mathop\text{not} p \right\urcorner$ refers to the form of any expression consisting of the word not followed by any
+value of the variable $p$ \cite{website:quasiquotationfreedictionary}.
+Quasi-quotation facilitates rigorous but terse formulation of general rules about expressions
+\cite{wikiquasi}.
 
 \subsection{Quasiquotaion in \progLang{Haskell}}
 
