--- a/hwh.tex
+++ b/hwh.tex
@@ -148,18 +148,18 @@ Thus ``not p'' refers to the expression consisting of the word not followed by t
 Quasi-quotation, or Quine quotation, is a metalinguistic device for referring to the form of an expression containing
 variables without referring to the symbols for those variables.
 Thus $\left\ulcorner \mathop\text{not} p \right\urcorner$ refers to the form of any expression consisting of the word not followed by any
-value of the variable $p$ \cite{website:quasiquotationfreedictionary}.
+value of the variable $p$ \cite{website:quasiquotationfreedictionary}. The varaible $p$ is sometimes called a meta-syntactic variable.
 Quasi-quotation facilitates rigorous but terse formulation of general rules about expressions
 \cite{wikiquasi}.
 
 \subsection{Quasiquotaion in \progLang{Haskell}}
 
 Quasiquoting allows programmers to use custom, domain-specific syntax to construct fragments of their program. Along with 
-\progLang{Haskell}'s existing support for domain specific languages, you are now free to use new syntactic forms for your EDSLs. Working 
+\progLang{Haskell}'s existing support for domain specific languages, you are now free to use new syntactic forms for your eDSLs. Working 
 with complex data types can impose a significant syntactic burden; extensive applications of nested data constructors are often required to 
 build values of a given data type, or, worse yet, to pattern match against values. Allow \progLang{Haskell} expressions and patterns to be 
 constructed using domain specific, programmer-defined concrete syntax \cite{haskellquasi, mainland2007s}.
-
+Listing~\ref{tab:prlgappndhsklqq} shows us the advantages of quasi quotation (in this example there are no metasynctactic variables).
 
 
 \section{Chapter recapitulation}
