added content to section 14.2 in futureScope.tex.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -17,7 +17,7 @@ This chapter discusses additions that could be made on the contributions of this
 
 \section{\progLang{Prolog} quasiquoter with antiquotation}
 As discussed in Section~\ref{background:approachestointegration} and Section~\ref{hwh:quasiquotationandhaskell}, a quasiquoter provides
-an economy of expression to describe a program in the eDSL. Listing~\ref{tab:qqprlginhskll} shows an example for a \progLang{Prolog}.
+an economy of expression to describe a program in the eDSL. Listing~\ref{tab:qqprlginhskll} shows an example.
 
 \begin{code-list}[H]
 \begin{singlespace}
