moved section warren abstract machine from relatedWork.tex to pwp.tex section 8.7.

--- a/pwp.tex
+++ b/pwp.tex
@@ -269,6 +269,12 @@ clause is chosen.
 depth first traversal of a particular search tree for the goal by always choosing the leftmost goal. Listing~\ref{tab:prlgprgrmtrce} shows
 a sample trace for a query.
 
+The underpinnings of the languages throw some more light on the how different languages work to solve a problem.
+Different programming paradigms incorporate different operational mechanisms.
+For example, \progLang{Prolog} programs execute on the Warren Abstract Machine \cite{ait1999warren} which has three
+different storage usages; a global stack for compound terms, for environment frames and choice points and lastly
+the trail to record which variables bindings ought to be undone on backtracking.
+
 \begin{code-list}[H]
   \begin{singlespace}
     \inputminted[linenos]{prolog}{prologprogramtrace.pl}
