Meeting commit : addressed note in embedding.tex.

--- a/embedding.tex
+++ b/embedding.tex
@@ -80,11 +80,7 @@ such as \prologConstruct{cut} and \prologConstruct{fail} with higher order funct
 The papers provide a minimalistic extension to \progLang{Haskell} with only four new constructs.
 Though no implementation exists, the synthesis and transformation techniques for functional programs have been
 \textit{logicalised} and applied to \progLang{Prolog} programs. \progLang{Prolog} is based on relations and \progLang{Haskell} is based on
-functions; \cite{spivey2000functional} takes this into consideration and attempts to model relations using functions.\endnote{%
-  I still don't understand what problems we are talking about here.
-  \mehul{I am trying to say what the papers did in terms of embedding \progLang{Prolog} in \progLang{Haskell}}
-  \mehul{changed}
-}
+functions; \cite{spivey2000functional} takes this into consideration and attempts to model relations using functions.
 
 
 \subsection{Other works related or based on the above}
